<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="10dp"
    android:gravity="center"
    android:layout_gravity="center"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_red"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_red"
        android:textColor="@color/black"
        android:backgroundTint="@color/red" />
    <Button
        android:id="@+id/button_orange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_orange"
        android:textColor="@color/black"
        android:backgroundTint="@color/orange" />
    <Button
        android:id="@+id/button_yellow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_yellow"
        android:textColor="@color/black"
        android:backgroundTint="@color/yellow" />
    <Button
        android:id="@+id/button_green"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_green"
        android:textColor="@color/black"
        android:backgroundTint="@color/green" />
    <Button
        android:id="@+id/button_blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_blue"
        android:textColor="@color/black"
        android:backgroundTint="@color/blue" />
    <Button
        android:id="@+id/button_violet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_violet"
        android:textColor="@color/black"
        android:backgroundTint="@color/violet" />
</LinearLayout>
